ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "true"
    konghq.com/plugins: twelve-per-min
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /task
            pathType: Prefix
            backend:
              service:
                name: task-1
                port:
                  number: 80
